--- a/package.json
+++ b/package.json
@@ -1,6 +1,28 @@
 {
+  "name": "social-network-api",
+  "version": "1.0.0",
+  "description": "User Story",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xdatalinq/social-network-api.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xdatalinq/social-network-api/issues"
+  },
+  "homepage": "https://github.com/xdatalinq/social-network-api#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
